panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_declaration_in_typeof_is_not_ignored.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_declaration_in_typeof_is_not_ignored.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_declaration_in_typeof_is_not_ignored.c"
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration x~3 `struct T~0 complete`
            (braced
               (designation ((member x)) 42)))
         (return
            (dot x
               (name x~3 `struct T~0 complete`))))))

----- stderr -----
