panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_define_struct_in_struct_no_declarator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_define_struct_in_struct_no_declarator.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_define_struct_in_struct_no_declarator.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct ∅~1
      (member x `int`))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (declaration s~5 `struct NoDeclarator~4`
            (braced
               (designation ((member y)) 2)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (dot y
                  (name s~5 `struct NoDeclarator~4`)))))))

----- stderr -----
