panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_error_nested_redefinition.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_error_nested_redefinition.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_error_nested_redefinition.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration xs~3 `array<struct T~2 complete; (sizeof `struct T~2 complete`)>` ∅)
         (return (lengthof (name xs~3 `array<struct T~2 complete; (sizeof `struct T~2 complete`)>`))))))

----- stderr -----
