panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_error_offsetof_bitfield.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_error_offsetof_bitfield.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_error_offsetof_bitfield.c"
   (typedef ptrdiff_t `typeof((subtract (cast `ptr<char>` nullptr) (cast `ptr<char>` nullptr)))`)
   (typedef size_t `typeof((sizeof `char`))`)
   (typedef max_align_t `long long`)
   (typedef wchar_t `int`)
   (typedef nullptr_t `typeof(nullptr)`)
   (struct T~0
      (member x (bitfield-width 20) `int`)
      (member y `int`))
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression (offsetof `struct T~0 complete` x))
         (expression (offsetof `struct T~0 complete` y)))))

----- stderr -----
