panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_incomplete_struct_not_completed_in_different_scope.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_incomplete_struct_not_completed_in_different_scope.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_incomplete_struct_not_completed_in_different_scope.c"
   (declaration ptr~1 `ptr<struct T~0>` ∅)
   (function-definition
      f~2 `fn() -> void`
      (compound-statement
         (struct T~4
            (member x `int`)
            (member y `int`))
         (expression (sizeof (deref (name ptr~1 `ptr<struct T~0>`)))))))

----- stderr -----
